# geoffrey-rs

./: 404.html  Cargo.toml  README.md  attribution.html  book.js  geoff.html  index.html  installation.html  print.html  searchindex.js
.github/workflows/: cd.yml  ci.yml  docs.yml
docs/: book.toml
docs/book/: 404.html  attribution.html  book.js  geoff.html  index.html  installation.html  print.html  searchindex.js  searchindex.json
docs/book/commands/: add.html  create.html
docs/book/commands/add/: data_source.html  exploration.html  model.html  product.html
docs/book/static/: styles.css
docs/book/subcommands/: add.html  create.html
docs/book/subcommands/add/: data_source.html  exploration.html  model.html  product.html
docs/book/theme/: my-css.css
docs/src/: SUMMARY.md  attribution.md  geoff.md  index.md  installation.md
docs/src/commands/: add.md  create.md
docs/src/subcommands/: add.md  build-docs.md  create.md
docs/theme/: index.hbs  my-js.js
src/: lib.rs
src/add_command/: mod.rs  tests.rs
src/create_command/: mod.rs  tests.rs
src/pleasant_error/: mod.rs  tests.rs
src/templates/data_sources/: database_metadata.md  default_metadata.md  extract_metadata.md  web_metadata.md
src/templates/root/: .geoff  README.md  project_scoping.md
subcommands/: add.html  create.html
subcommands/add/: data_source.html  exploration.html  model.html  product.html
test_fixtures/: Cargo.toml
test_fixtures/src/: lib.rs
tests/: test_create_command.rs
tests/integration/: main.rs  test_add_data_source.rs  test_create_command.rs
(+5 files in other folders)
