[package]
name = "geoffrey"
version = "0.2.0"
edition = "2021"
description = "A simple tool to automate the creation of some folders and files for data science projects"

[dependencies]
clap = { version = "3.2.21", features = ["derive"] }
console = "0.15.1"
env_logger = "0.9.1"
log = "0.4.17"
mdbook = { version = "0.4.21", optional = true }
ptree = "0.4.0"

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "2.1.1"
test_fixtures = { path = "test_fixtures" }

[lib]
doctest = false

[features]
documentation = ["dep:mdbook"]
